# code-from-GENE-KBU6

devel/: .catkin  .rosinstall  setup.sh
devel/lib/elmo_ethercat/: current_control  main
devel/lib/pkgconfig/: elmo_ethercat.pc  soem.pc
devel/lib/soem/: eepromtool  simple_test  slaveinfo
devel/share/elmo_ethercat/cmake/: elmo_ethercat-msg-paths.cmake  elmo_ethercatConfig.cmake
devel/share/roseus/ros/elmo_ethercat/: manifest.l
devel/share/soem/cmake/: soemConfig.cmake
src/elmo_ethercat/: CMakeLists.txt  README.md
src/elmo_ethercat/include/: Elmo_EtherCAT.cpp  Elmo_EtherCAT.h
src/elmo_ethercat/launch/: main.launch
src/elmo_ethercat/src/: .Elmo_EtherCAT.cpp.swp  current_control.cpp  main.cpp
